@@ -5,7 +5,8 @@
 ===============================================================================
 
 - 1.1.5
-    - Adjust srcdir and builddir so libnet can build out-of-tree (Robin Getz/Mike Frysinger)
+    - Update autobuild endianness and unaligned checks. (Mike Frysinger)
+    - Adjust autobuild so libnet can build out-of-tree. (Robin Getz/Mike Frysinger)
 
 - 1.1.4
 
